Add  Cloud Fundamentals notes

--- a/1. Commerce Cloud Fundamentals.md
+++ b/1. Commerce Cloud Fundamentals.md
@@ -13,19 +13,153 @@
 
 #### 1.2 Determine how to locate settings with Cloud Admin UI
 
-###### Locate project settings, user management, and project variables pages
-###### Locate environments, access links, and logs
+###### Locate project settings, user management, and project variables pages [*](https://devdocs.magento.com/guides/v2.3/cloud/project/projects.html)
+
+Log into the Project Web Interface at https://accounts.magento.cloud.
+
+![Project settings url](https://devdocs.magento.com/common/images/cloud_project_gear.png)
+
+Project settings url: https://eu.magento.cloud/projects/{project_id}/edit
+
+ - User management
+ - Certificates
+ - Deploy Key
+    > SSH key to access external private code repositories pulled during the build process.
+ - Project variables
+    > These variables are made available at build-time and/or runtime in all environments of the project.
+
+###### Locate environments, access links, and logs [*](https://devdocs.magento.com/guides/v2.3/cloud/project/project-webint-basic.html)
+
+![Access site](https://devdocs.magento.com/common/images/cloud_project-access.png)
+
+![git](https://devdocs.magento.com/common/images/cloud_project-clone.png)
+
+Logs can be filtered:
+- branch (branched from ..)
+- git (Name pushed to Production)
+- merge (Name merged Integration into Staging)
+- snapshot (Name created snapshot project_id-integration-hash of Integration - restore)
+- sync (synced with the parent)
+- system (env variables, user management, routes, )
+
+![history](https://devdocs.magento.com/common/images/cloud_environment-history.png)
+
 ###### Locate environment settings
 
-#### 1.3 Demonstrate the ability to manage users
+You can manage variables and settings for environments through this interface, or with CLI commands. 
+Click _Configure environment_ to create and manage environments.
+![Manage environment settings](https://devdocs.magento.com/common/images/cloud_project-env.png)
 
-###### Add SSH key
+In the configuration page:
+- Settings
+    - Change environment status (Enable/Disable)
+    - Outgoing emails (On/Off)
+    - Indexing by search engines (On/Off)
+    - HTTP access control (Basic auth + IP address access control)
+- Environment-specific variables
+    > These variables will be available at runtime in this environment, and will be inherited by child environments.
+- Routes [?](https://devdocs.magento.com/guides/v2.3/cloud/project/project-conf-files_routes.html)
+    > Routes allow you to set redirects or upstream settings for applications for your specific environment
+- Users [?](https://devdocs.magento.com/guides/v2.3/cloud/project/user-admin.html)
+ 
+
+![Settings](https://devdocs.magento.com/common/images/cloud_project-conf-env.png)
+
+
+#### 1.3 Demonstrate the ability to manage users [*](https://devdocs.magento.com/guides/v2.3/cloud/project/user-admin.html)
+
+###### Add SSH key [*](https://devdocs.magento.com/guides/v2.3/cloud/before/before-workspace-ssh.html)
+
+**Add a key using the CLI**
+
+`magento-cloud ssh-key:add ~/.ssh/id_rsa.pub`
+
+ssh-key cli commands:
+```
+  ssh-key:add                  Add a new SSH key
+  ssh-key:delete               Delete an SSH key
+  ssh-key:list (ssh-keys)      Get a list of SSH keys in your account
+```
+
+**Add a key using the Project Web Interface**
+- In the upper right corner, click {your name} > Account Settings.
+- Account Settings
+- SSH Keys
+- Add a public key (Title, Key)
+
+
 ###### Add users to a project and manage their roles
+**Project-level roles**:
+- Account owner
+- Project administrator (Super user)
+    > can change settings and execute actions on any environment, including creating and restoring snapshots
+- Project reader
+    > can view all environments in a project but cannot execute any actions on them
 
-#### 1.4 Determine the difference between Magento Cloud plans
+**Environment-level roles**:
+- Environment administrator
+    > can change settings and execute actions on this environment, including merging with the parent environment
+- Environment contributor 
+    > can push code to this environment and branch the environment
+    > by default does not have SSH access to the environment (s. You can change the behavior in .magento.app.yaml by specifying access: ssh: contributor) 
+- Environment reader
+
+**Manage users with the CLI**
+```
+user:add                  Add a user to the project
+user:delete               Delete a user from the project
+user:get                  View a user's role(s)
+user:list (users)         List project users
+user:update               Update user role(s) on a project
+```
+
+After a new user is added to an environment, the environment must be rebuilt
+
+#### 1.4 Determine the difference between Magento Cloud plans [*](https://devdocs.magento.com/guides/v2.2/cloud/architecture/cloud-architecture.html)
 
 ###### Starter plan vs. Pro differences
+
+| Starter  | Pro  |
+|----------|------|
+|  Business Intelligence Essentials | Business Intelligence Pro  |
+| 4 total active environments  | 8 total active environments)  |
+| Platform-as-a-service (PaaS) based Production, Staging, and development environments  | Infrastructure-as-a-Service (IaaS)—dedicated virtual infrastructure for Production environments and for Staging environments (Dedicated hardware) |
+| -  | High availability architecture with a three-server setup in the underlying Infrastructure-as-a-Service (IaaS) to provide enterprise grade reliability and availability  |
+| _master_ branch for Production env | _production_ branch for Production env |
+
 
 #### 1.5 Determine how different environment types operate
 
 ##### Determine differences in environment types: Integration, staging, production
+
+>**Starter projects**
+>
+>_Integration_—The Integration environment provides three testable environments. Each environment includes an active Git branch, database, web server, caching, services, environment variables, and configurations.
+>
+>_Staging_—As code and extensions pass your tests, you can merge your Integration branch to a Staging environment, which becomes your pre-Production testing environment. It includes the staging active branch, database, web server, caching, services, environment variables, configurations, and services, such as Fastly and New Relic.
+>
+>_Production_—When code is ready and tested, all code merges to master for deployment to the Production live site. This environment includes your active master branch, database, web server, caching, third-party services, environment variables, and configurations.
+>
+>_Inactive_—You can have an unlimited number of inactive branches.
+>
+>
+>**Pro projects**
+>
+>_Integration_—The Integration environment provides a testable environment that includes a database, web server, caching, some services, environment variables, and configurations. You can develop, deploy, and test your code before merging to the Staging environment.
+>
+>_Inactive_—You can have an unlimited number of inactive branches based on the Integration environment.
+>
+>_Staging_—The Staging environment is for pre-Production testing and includes a database, web server, caching, services, environment variables, configurations, and services, such as Fastly.
+>
+>_Production_—The Production environment includes a three-node, high-availability architecture for your data, services, caching, and store. This is your live, public store environment with environment variables, configurations, and third-party services.
+(https://devdocs.magento.com/guides/v2.2/cloud/architecture/cloud-architecture.html)
+
+
+
+Documentation:
+- [Manage your project](https://devdocs.magento.com/guides/v2.3/cloud/project/projects.html)
+- [Configure your project](https://devdocs.magento.com/guides/v2.3/cloud/project/project-webint-basic.html)
+- [Create and manage users](https://devdocs.magento.com/guides/v2.3/cloud/project/user-admin.html)
+- [Magento Commerce Cloud architecture](https://devdocs.magento.com/guides/v2.3/cloud/architecture/cloud-architecture.html)
+- [Starter architecture](https://devdocs.magento.com/guides/v2.3/cloud/basic-information/starter-architecture.html)
+- [Pro architecture](https://devdocs.magento.com/guides/v2.3/cloud/architecture/pro-architecture.html)
