Add cloud features and technology stack

--- a/1. Commerce Cloud Fundamentals.md
+++ b/1. Commerce Cloud Fundamentals.md
@@ -10,6 +10,10 @@
 > Magento Commerce Cloud provides a pre-provisioned infrastructure that includes PHP, MySQL, Redis, RabbitMQ, and Elasticsearch technologies; a git-based workflow with automatic build and deploy for efficient Rapid development and Continuous deployment every time you push code changes in a Platform as a Service (PaaS) environment; highly Customizable environment configuration files and tools; and AWS hosting that offers a Scalable and Secure environment for online sales and retailing.
 (https://devdocs.magento.com/guides/v2.3/cloud/bk-cloud.html)
 
+Technology stack
+![tech stack](https://devdocs.magento.com/common/images/cloud/CloudStack.png)
+> Amazon Web Services (AWS) powers the underlying Infrastructure as a Service (IaaS) for Magento Commerce Cloud. Each Magento Commerce Cloud plan provides a PaaS Integration environment for developing, testing, and integrating services, see Magento Commerce Cloud architecture for a comparison and additional features. Performance tools provide granular visibility into the site performance and PHP profiling. Fastly caches site assets and, as customers access the site and stores, loads the cached assets fast. The Fastly Image Optimization (IO) offloads image processing and resizing load, freeing servers to process orders and conversions efficiently.
+
 
 #### 1.2 Determine how to locate settings with Cloud Admin UI
 
@@ -116,6 +120,18 @@ user:update               Update user role(s) on a project
 After a new user is added to an environment, the environment must be rebuilt
 
 #### 1.4 Determine the difference between Magento Cloud plans [*](https://devdocs.magento.com/guides/v2.2/cloud/architecture/cloud-architecture.html)
+
+Common features (for both plans):
+- Magento 2 CE(EE) core features
+- PayPal Onboarding Tool
+- B2B module
+- Fastly Content Delivery Network (CDN), Image Optimization (IO), and added security with generous bandwidth allowances
+- New Relic APM for 3 branches
+- Blackfire.io Enterprise
+- Platform-as-a-service (PaaS) optimized for Magento Commerce
+- 24x7 monitoring and email support for the core application and the cloud infrastructure
+- Dedicated technical account management for the initial launch period, starting with your subscription until your initial site launch  
+
 
 ###### Starter plan vs. Pro differences
 
