--- a/2. Local Environment.md
+++ b/2. Local Environment.md
@@ -1,5 +1,30 @@
 # Local Environment
 
-#### 2.1 Demonstrate ability to set up local development
+#### 2.1 Demonstrate ability to set up local development[*](https://devdocs.magento.com/guides/v2.3/cloud/setup/first-time-setup.html)
+
+###### Software you need to have locally for developing a Magento Cloud project
+
+- Virtual machine or container (host): Vagrant, Docker
+- Git
+- Composer
+- Web server: Apache, Nginx
+- PHP: PHP 7.1.3+ or 7.2
+- PHP packages: bcmath, curl, ext-dom, fpm, gd, intl, json, mbstring, mcrypt (for PHP 7.1 and earlier only), mysql, xml, zip
+- Set up PHP memory limit (memory_limit: 2G)
+- Database: MySQL or MariaDB with a Galera Cluster (Magento Commerce environments use it)
+     > for Pro plans modify the `auto_increment_increment = 3` value
+- Magento Cloud CLI
+- SSH
+
+Se also [Magento Commerce requirements](https://devdocs.magento.com/guides/v2.3/install-gde/system-requirements.html)
 
 #### 2.2 Given a scenario, demonstrate ability to use the Magento-cloud CLI tool
+
+###### Install Magento-cloud CLI. Retrieve project info
+###### Manage project and environments
+###### Connect to database and SSH
+###### Build the project locally
+
+Documentation:
+- [Local development](https://devdocs.magento.com/guides/v2.3/cloud/setup/first-time-setup.html)
+- [Prepare for local environment setup](https://devdocs.magento.com/guides/v2.3/cloud/before/before-workspace.html)
