Local Environment / Docker

--- a/2. Local Environment.md
+++ b/2. Local Environment.md
@@ -264,7 +264,61 @@ worker
   worker:list (workers)                          Get a list of all deployed workers
 ```
 
+#### 2.x Docker
+[Magento Commerce (Cloud) Docker](https://github.com/magento/magento-cloud-docker)
 
+Docker images:
+- DB: MariaDB versions 10.0, 10.1, 10.2
+- FPM: PHP versions 7.0, 7.1, 7.2
+- NGINX: 1.9
+- Redis: 3.0, 3.2, 4.0, 5.0
+- Varnish: 4.x
+- RabbitMQ: 3.5, 3.7
+- Elasticsearch: 1.7, 2.4, 5.2, 6.5
+
+Launch Docker configuration:
+- Docker configuration generator: `./vendor/bin/ece-tools docker:build`
+- Copy and configure env files:
+    ```
+    cp docker/config.php.dist docker/config.php
+    cp docker/global.php.dist docker/global.php
+    ```
+- Convert the PHP configuration files to Docker ENV files: `./vendor/bin/ece-tools docker:config:convert`
+- Build files to containers and run in the background: `docker-compose up -d`
+- Build Magento in the Docker container: `docker-compose run build cloud-build`
+- Deploy Magento in the Docker container: `docker-compose run deploy cloud-deploy`
+- Stop and remove: `docker-compose down -v`
+
+ece-tools
+```
+ docker
+  docker:build              Build docker configuration
+  docker:build:integration  Build test docker configuration
+  docker:config:convert     Convert raw config to .env files configuration
+```
+
+Cli containers:
+> build—extends the CLI container to perform operations with writable filesystem, similar to the build phase
+>
+> deploy—extends the CLI container to use read-only file system, similar to the deploy phase
+>
+> cron—extends the CLI container to run cron
+> 
+> The setup:cron:run and cron:update commands are not available on Cloud and Docker for Cloud environment
+>
+> Cron only works with CLI container to run ./bin/magento cron:run command
+(https://devdocs.magento.com/guides/v2.3/cloud/docker/docker-development.html)
+
+Docker compose command:
+```
+Build environment    docker-compose run build cloud-build
+Deploy environment    docker-compose run deploy cloud-deploy
+Connect to CLI container    docker-compose run deploy bash
+Use ece-tools command    docker-compose run deploy ece-command <command>
+Use Magento command    docker-compose run deploy magento <command>
+Stop Docker environment without destroying containers    docker-compose stop
+Resume Docker environment    docker-compose start
+```
 
 Documentation:
 - [Local development](https://devdocs.magento.com/guides/v2.3/cloud/setup/first-time-setup.html)
