Add Magento Cloud links

--- a/2. Local Environment.md
+++ b/2. Local Environment.md
@@ -3,6 +3,7 @@
 #### 2.1 Demonstrate ability to set up local development[*](https://devdocs.magento.com/guides/v2.3/cloud/setup/first-time-setup.html)
 
 ###### Software you need to have locally for developing a Magento Cloud project
+- Operating system: Debian GNU/Linux 8 (jessie)
 - Virtual machine or container (host): Vagrant, Docker
 - Git
 - Composer
