Cloud Configuration / routes, redirects

--- a/3. Cloud Configuration.md
+++ b/3. Cloud Configuration.md
@@ -2,6 +2,75 @@
 
 #### 3.1 Determine how to configure Cloud
 
+###### How to configure different redirects in this file, which types of redirects should not be configured here
+A route describes how an incoming HTTP request is going to be processed by Magento Cloud. 
+Route configuration (from platform.sh)
+![Routes](https://docs.platform.sh/images/config_diagrams/routes2.svg)
+
+File `.magento/routes.yaml` - defines routes for the Integration environments.
+```yaml
+"http://{default}/":
+    type: upstream
+    upstream: "mymagento:php"
+
+# whole-route redirects
+"http://www.{default}/":
+    type: redirect
+    to: http://{default}/
+
+# partial redirects
+http://test.{default}/:
+  type: upstream
+  redirects:
+    expires: 1d
+    paths:
+      "/from": { "to": "/destination", code: 308, expires: 2w}
+      "/regexp/(.*)/matching": { "to": "http://example.com/$1", regexp: true }
+```
+
+Each rule under `paths` is defined by: 
+    _key_ -  expression to match against the request path;
+    _value_ -  object describing both the destination to redirect with detail on how to handle the redirection;
+
+Value object is defined with the following keys:
+- to: (required) partial ("/destination" or "//destination") or full URL ("http://example.com/").
+- regexp: (default: false) specifies whether the path key should be interpreted as a PCRE regular expression
+    Special arguments in the `to` statement (only if regexp: true)
+    - `$is_args`: `?` or empty string
+    - `$args`: full query string if any
+    - `$arg_foo`: value of the query parameter `foo`
+    - `$uri`: full URI of the request
+- prefix: (default: true, not supported if regexp is true) specifies whether we should redirect both the path and all its children or just the path itself
+    Example: 
+    if true: /from redirects to /to and /from/another/path will redirect to /to/another/path
+    if false: /from triggers a redirect, but /from/another/path does not.
+- append_suffix: (default: true, not supported if regexp is true or if prefix is false) determines if the suffix is carried over with the redirect
+    Example:
+    if true: /from redirects to /to/path/suffix in case /from/path/suffix
+    if false: /from redirects to /to in case /from/path/suffix
+- code: status codes are 301, 302 (default), 307, and 308
+- expires: examples of valid values include 3600s, 1d, 2w, 3m
+
+List the configured routes: `magento-cloud environment:routes`
+
+Which types of redirects should not be configured here:
+- Application-driven redirects
+- Fastly
+- Long list of storefront domains (not sure)
+- As a general rule we recommend keeping the defined routes under 100
+- Let's Encrypt also limits an environment to 100 configured domains
+- Linux kernel limit on environment variables is 32 pages (each page is 4k on x86, so maximum environment variable length of 128KB). So it's a limits for `routes.yaml`
+
+###### How to add these configurations to Staging or Production environments. Magento On-Premises installation migration
+
+###### How to migrate an existing Magento installation into Magento Cloud: Code base, database, media migration
+
 #### 3.2 Determine how to configure a planned service
 
 #### 3.3 Demonstrate ability to add to your environment
+
+Documentation:
+- [Configure Routes / platform.sh](https://docs.platform.sh/configuration/routes.html)
+- [Configure routes](https://devdocs.magento.com/guides/v2.3/cloud/project/project-conf-files_routes.html)
+- [Redirects / platform.sh](https://docs.platform.sh/configuration/routes/redirects.html)
+- [Redirects](https://devdocs.magento.com/guides/v2.3/cloud/project/project-routes-more-redir.html)
