Cloud Configuration / Staging or Production environment redirects

--- a/3. Cloud Configuration.md
+++ b/3. Cloud Configuration.md
@@ -63,7 +63,66 @@ Which types of redirects should not be configured here:
 
 ###### How to add these configurations to Staging or Production environments. Magento On-Premises installation migration
 
+`.magento/routes.yaml` limitations:
+> For Pro projects, the changes you make using this YAML file affects your Integration environment only. 
+> To make these changes in a Staging or Production environment, you must create a Support ticket.
+(https://devdocs.magento.com/guides/v2.3/cloud/project/project-conf-files_routes.html)
+
+Other
+> You must submit a support ticket to update and modify the following in the Staging and Production environments:
+> - Cron jobs
+> - Redirects from routes.yaml file
+> - Managing PHP extensions
+> - Managing mounts
+(https://devdocs.magento.com/guides/v2.3/cloud/trouble/pro-env-management.html)
+
+Also it's possible to create redirect via Fastly VCL snippets:
+1. Set the custom response code related to redirects
+    - Name: student_redirect
+    - Type: recv
+    - Priority: 100
+    - VCL snippet content:
+        ```
+        if (req.http.host ~ "student.test.com"") {
+            error 750 "student.test.com"";
+        } 
+        ```
+2. VCL that contains all needed redirects:
+    - Name: custom_domains_redirect
+    - Type: error
+    - Priority: 100
+    - VCL snippet content:
+        ```
+        if (obj.status == 750) {
+            if (obj.response ~ "student.test.com") {
+                set obj.http.Location = "https://test.com/student";
+            }
+            set obj.status = 302;
+            set obj.response = "Moved Temporarily";
+            return (deliver);
+        }
+        ```
+
+Example [how set up redirects to WordPress using Fastly](https://devdocs.magento.com/guides/v2.3/cloud/cdn/fastly-vcl-wordpress.html)
+
+VCL snippet for the WordPress redirect
+```json
+{
+  "name": "wordpress_redirect",
+  "dynamic": "0",
+  "type": "recv",
+  "priority": "5",
+  "content": "if ( req.url.path ~ \"^\\/?([^\\/?]+)\") { if ( table.lookup(wordpress_urls, re.group.1, \"NOTFOUND\") != \"NOTFOUND\" ) { set req.http.X-WP = \"1\"; } }"
+}
+```
+
+Another way to set up redirects - use [edge dictionary](https://docs.fastly.com/guides/edge-dictionaries/about-edge-dictionaries).
+[Working with Edge Dictionary items using the API](https://docs.fastly.com/guides/edge-dictionaries/working-with-dictionary-items-using-the-api)
+
+
 ###### How to migrate an existing Magento installation into Magento Cloud: Code base, database, media migration
+
+
 
 #### 3.2 Determine how to configure a planned service
 
@@ -74,3 +133,4 @@ Documentation:
 - [Configure routes](https://devdocs.magento.com/guides/v2.3/cloud/project/project-conf-files_routes.html)
 - [Redirects / platform.sh](https://docs.platform.sh/configuration/routes/redirects.html)
 - [Redirects](https://devdocs.magento.com/guides/v2.3/cloud/project/project-routes-more-redir.html)
+- [Custom Fastly VCL snippets](https://devdocs.magento.com/guides/v2.3/cloud/cdn/cloud-vcl-custom-snippets.html)
