Cloud Configuration / Migrate an existing Magento installation

--- a/3. Cloud Configuration.md
+++ b/3. Cloud Configuration.md
@@ -122,7 +122,73 @@ Another way to set up redirects - use [edge dictionary](https://docs.fastly.com/
 
 ###### How to migrate an existing Magento installation into Magento Cloud: Code base, database, media migration
 
+**Code base**
+- add required files ([examples from magento-cloud repo](https://github.com/magento/magento-cloud))
+    ```
+    .magento.app.yaml - manages applications, service relationships, mounts for writable directories, and cron jobs
+    .magento/services.yaml - for service configurations including MySQL, PHP, Redis, Solr (2.0.X only), ElasticSearch (2.1.X and later)
+    .magento/routes.yaml - for handling routes including redirections, caching, and server-side includes
+    magento-vars.php - for multiple websites and stores
+    ```
+- add Magento authentication keys and custom repositories keys
+    - using `auth.json` file
+        ```json
+        {
+           "http-basic": {
+              "repo.magento.com": {
+              "username": "<public-key>",
+              "password": "<private-key>"
+            }
+          }
+        }
+        ```
+    - using an environment variable (`env:COMPOSER_AUTH`)
+        - project level variable
+        - name: env:COMPOSER_AUTH.
+        - content the same as in `auth.json` file
+        - visible during build: true
+        - visible at run: false
+- edit composer.json
+    - replace `magento/product-enterprise-edition` to `"magento/magento-cloud-metapackage": "<version>",`
+    - update the "files" directive in the autoload section to refer to app/etc/NonComposerComponentRegistration.php (why?)
+    - run composer update to update composer.lock
+- encryption key
+    - get old encryption key from <Magento install dir>/app/etc/env.php (crypt/key)
+    - add variable `CRYPT_KEY` with correct key
+    - or update crypt/key manually on each env (don't like it)
+    - see ece-tools [Process/Deploy/SetCryptKey.php](https://github.com/magento/ece-tools/blob/develop/src/Process/Deploy/SetCryptKey.php)
 
+**Database**
+- create a database dump: 
+    `mysqldump -h <db-host> -P <db-port> -p -u <db-user> <db-name> --single-transaction --no-autocommit --quick | gzip > ~/db.sql.tgz`
+- transfer the database dump to the Magent Cloud
+    `rsync db.sql.tgz <cloud SSH URL>:var/db.sql.tgz`
+- ssh to needed env
+    `magento-cloud ssh`
+- connect to the database
+    `mysql -h <db-host> -P <db-port> -p -u <db-user> <db-name>`
+- drop the database
+    `drop database <db-name>;`
+- re-create the database
+    `create database <db-name>;`
+- restore dump
+    `zcat var/db.sql.tgz | sed -e 's/DEFINER[ ]*=[ ]*[^*]*\*/\*/' | mysql -h <db-host> -P <db-port> -p -u <db-user> <db-name>` 
+- update configs (`SELECT * from core_config_data;`)
+    - base URLs
+        - `UPDATE core_config_data SET value='<Cloud unsecure base URL>' WHERE path='web/unsecure/base_url';`
+        - `UPDATE core_config_data SET value='<Cloud secure base URL>' WHERE path='web/secure/base_url';`
+
+**Media migration**
+- back up media files
+    `php <Magento Commerce install dir>/bin/magento setup:backup --media`
+- transfer the media dump
+    `rsync <Magento Commerce install dir>/var/backups/<backup file name> <cloud ssh url>:var/media.tgz`
+- ssh to needed env
+    `magento-cloud ssh`
+- clear existing media files
+    `rm -rf pub/media/*`
+- extract the media files to the pub/media directory
+    `tar -xzf var/media.tgz pub/media`
 
 #### 3.2 Determine how to configure a planned service
 
