--- a/3. Cloud Configuration.md
+++ b/3. Cloud Configuration.md
@@ -192,7 +192,13 @@ Another way to set up redirects - use [edge dictionary](https://docs.fastly.com/
 
 #### 3.2 Determine how to configure a planned service
 
+###### How to configure a service that is planned to be added to the environment
+
 #### 3.3 Demonstrate ability to add to your environment
+
+###### Which configurations you can add to your environment and how to do it
+
+###### What to configure in this file, on which environments these configurations are applied, how to add these configurations to environments where this file is not read
 
 Documentation:
 - [Configure Routes / platform.sh](https://docs.platform.sh/configuration/routes.html)
@@ -200,3 +206,4 @@ Documentation:
 - [Redirects / platform.sh](https://docs.platform.sh/configuration/routes/redirects.html)
 - [Redirects](https://devdocs.magento.com/guides/v2.3/cloud/project/project-routes-more-redir.html)
 - [Custom Fastly VCL snippets](https://devdocs.magento.com/guides/v2.3/cloud/cdn/cloud-vcl-custom-snippets.html)
+- [Import existing code into a project](https://devdocs.magento.com/guides/v2.3/cloud/setup/first-time-setup-import-first-steps.html)
