Deployment Process / build and deploy phases

--- a/5. Deployment Process.md
+++ b/5. Deployment Process.md
@@ -2,4 +2,84 @@
 
 #### 5.1 Determine the processes during deployment
 
+###### Describe all processes that are running during deployment: Build, deploy and post-deploy phases. Explain why downtime occurs on your project
+
+Build and deploy full steps:
+1. Code and configuration validation
+    - run series of checks and code validation
+    - modify cluster topology (e.g. elasticsearch was added) 
+    - run `composer install`
+    - on syntax error in a configuration file, Git server refuses the push, see [Protective block](https://devdocs.magento.com/guides/v2.3/cloud/live/live-prot.html)
+        - to disable protective block 
+        ```
+        # .magento.app.yaml
+        preflight:
+           enabled: false
+        ```
+2. Build
+    - site is not in maintenance mode
+    - will not be brought down if errors or issues occur
+    - cluster has not been created yet (don't try to connect to a database or assume anything was daemonized)
+    - execute commands before packaging your application
+    - runs hooks in the `build` section from `.magento.app.yaml`
+    ```yaml
+    # We run build hooks before your application has been packaged.
+    build: |
+        set -e
+        php ./vendor/bin/ece-tools build:generate
+        php ./vendor/bin/ece-tools build:transfer
+       # old style
+       #php ./vendor/bin/ece-tools build
+    ```
+    - result of the build phase is a read-only file system referred to as a slug
+    - TODO: ./vendor/bin/ece-tools build:generate / build:transfer
+3. Prepare the slug
+    - create an archive and put the slug in permanent storage
+    - slug includes all files and folders excluding the mounts configured in `magento.app.yaml`
+    ```yaml
+    mounts:
+        "var": "shared:files/var"
+        "app/etc": "shared:files/etc"
+        "pub/media": "shared:files/media"
+        "pub/static": "shared:files/static"
+    ```
+4. Deploy slugs and cluster
+    - file systems are read-only
+    - mounts each service in a container (web server, Elasticsearch, RabbitMQ)
+    - mounts the read-write file system (mounted on a highly available distributed storage grid)
+    - configures the network so services can “see” each other (and only each other)
+5. Deployment hooks
+    - freeze the incoming traffic at the entry point for 60 seconds
+    - puts the application in maintenance mode until deployment is complete
+    - execute commands after packaging and deploying your application
+    - runs hooks in the `deploy` section from `.magento.app.yaml`
+    ```yaml
+    # We run deploy hook after your application has been deployed and started.
+    deploy: |
+        php ./vendor/bin/ece-tools deploy
+    ```
+    - deploy script uses the values defined by configuration files in the `.magento` directory, then the script deletes the directory and its contents
+    - TODO: php ./vendor/bin/ece-tools deploy
+6. Post-deployment: configure routing
+    - creates backup (BAK) files for the app/etc/env.php and the app/etc/config.php configuration files
+    - execute commands after deploying your application and after the container begins accepting connections
+    - runs hooks in the `post_deploy` section from `.magento.app.yaml`
+    ```yaml
+    # We run post deploy hook to clean and warm the cache. Available with ECE-Tools 2002.0.10.
+    post_deploy: |
+        php ./vendor/bin/ece-tools post-deploy
+    ```
+    - TODO: php ./vendor/bin/ece-tools post-deploy
+
+###### What role every process/phase plays and how to impact every process
+
+###### How Magento Cloud deploys Magento. What every script does on every deployment phase
+
+###### How to extend these scripts and best practices for doing so
+
+###### Describe the ways to retrieve logs for phases and its scripts
+
 #### 5.2 Demonstrate the ability to create Magento Cloud script configurations
+
+Documentation:
+- [Deployment process](https://devdocs.magento.com/guides/v2.3/cloud/reference/discover-deploy.html#cloud-deploy-over-phases)
