Deployment Process / docs links update

--- a/5. Deployment Process.md
+++ b/5. Deployment Process.md
@@ -11,7 +11,7 @@ Build and deploy full steps:
     - run `composer install`
     - on syntax error in a configuration file, Git server refuses the push, see [Protective block](https://devdocs.magento.com/guides/v2.3/cloud/live/live-prot.html)
         - to disable protective block 
-        ```
+        ```yaml
         # .magento.app.yaml
         preflight:
            enabled: false
@@ -83,3 +83,4 @@ Build and deploy full steps:
 
 Documentation:
 - [Deployment process](https://devdocs.magento.com/guides/v2.3/cloud/reference/discover-deploy.html#cloud-deploy-over-phases)
+- [Build and deploy / platform.sh](https://docs.platform.sh/configuration/app/build.html#build-hook)
